# Liverappolo

./: Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: main.yaml
data/: cleaned_data.csv
models/: liverappolo.pkl  liverzeus.pkl  scaler.pkl
notebooks/: liverpred.ipynb
templates/: liverappolo.html
